refactor product get all api